data/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_D365_Id__c</fullName>
        <externalId>true</externalId>
        <label>Building D365 Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_No__c</fullName>
        <label>Building No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Energy_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Energy Specialist</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB__c</fullName>
        <label>DB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecap_Building_Id__c</fullName>
        <label>Ecap Building Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ecap_Owner__c</fullName>
        <label>Ecap Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Program_D365_Id__c</fullName>
        <label>Energy Program D365 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Energy_Specialist_D365_Id__c</fullName>
        <label>Energy Specialist D365 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_GreenX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from GreenX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Measure_Building_ID__c</fullName>
        <label>Measure Building ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Code__c</fullName>
        <label>Place Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Id__c</fullName>
        <label>Place Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Use__c</fullName>
        <label>Primary Use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Current_Energy_Specialist__c</columns>
        <columns>Energy_Program__c</columns>
        <columns>Square_Footage__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Energy_Program__c</field>
            <operation>contains</operation>
            <value>Univ of Kentucky</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>